# spt-neural-net

./: .gitignore  Cargo.toml  LICENSE  README.md
mnist_dataset/: README.md
src/: lib.rs  main.rs  neural_network.rs  numeric_image.rs
